--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,6 +7,7 @@ metadata:
   tags:
   - iot
   - iotkit
+  - education
   links:
   - url: https://github.com/mc-b/IoTKitV1
     title: Repository
@@ -16,6 +17,6 @@ metadata:
     backstage.io/source-location: url:https://github.com/mc-b/IoTKitV1
     # backstage.io/techdocs-ref: url:https://github.com/mc-b/IoTKitV1
 spec:
-  type: education
+  type: website
   lifecycle: deprecated
   owner: group:mc-b/mc-b
